# jelly-fpga-server

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  README_en.md  README_jp.md  binst.sh  build.rs  install.sh  test_get_version.py  uninstall.sh
.github/workflows/: release.yml
examples/: test_get_version.rs
protos/: fpga_control.proto  jelly_fpga_control.proto
src/: accessor.rs  main.rs
