[package]
name = "jelly-fpga-server"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
clap = {version ="4.5.50", features = ["derive"] }
once_cell = "1.13.1"
jelly-uidmng = {git="https://github.com/ryuz/jelly-uidmng-rs.git", tag="v0.0.4"}
jelly-fpgautil = {git="https://github.com/ryuz/jelly-fpgautil-rs.git", tag="v0.0.5"}
jelly-mem_access = "0.2.2"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
